# othelloAI

./: CMakeLists.txt  README.md  board.cpp  board.hpp  main.cpp  option_parser.cpp  option_parser.hpp  player.hpp
player/: human_player.cpp  human_player.hpp  sample_computer_player.cpp  sample_computer_player.hpp
